tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_trait_impl_generics_count_mismatch/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Foo expects 0 generics but 1 was given
  ┌─ src/main.nr:4:10
  │
4 │     impl Foo<()> for Field {}
  │          ---
  │

Aborting due to 1 previous error
