tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_trait_impl_generics_count_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Foo expects 0 generics but 1 was given
  ┌─ src/main.nr:4:10
  │
4 │     impl Foo<()> for Field {}
  │          ---
  │

Aborting due to 1 previous error
